List.of was replaced with Collections.emptyList